--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nocker",
+  "name": "knocker",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,5 +11,10 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.2.6",
+    "postcss": "^8.3.5",
+    "tailwindcss": "^2.2.4"
   }
 }
