--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@headlessui/react": "^1.3.0",
@@ -18,9 +20,13 @@
     "react-toast-notifications": "^2.5.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
     "autoprefixer": "^10.2.6",
+    "babel-jest": "^27.0.6",
     "eslint": "^7.30.0",
     "eslint-config-next": "^11.0.1",
+    "jest": "^27.0.6",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.4"
   }
