--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
+    "@testing-library/react-hooks": "^7.0.1",
     "autoprefixer": "^10.2.6",
     "babel-jest": "^27.0.6",
     "eslint": "^7.30.0",
