--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-toast-notifications": "^2.5.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.3.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/react-hooks": "^7.0.1",
