--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@headlessui/react": "^1.4.0",
     "@heroicons/react": "^1.0.1",
-    "next": "11.0.1",
+    "next": "^11.1.0",
     "pg": "^8.6.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
