--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.15",
+    "@chakra-ui/react": "^1.6.6",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@fontsource/roboto": "^4.5.0",
     "@headlessui/react": "^1.4.0",
     "@heroicons/react": "^1.0.1",
+    "framer-motion": "^4.1.17",
     "next": "^11.1.0",
     "pg": "^8.6.0",
     "react": "17.0.2",
