--- a/package.json
+++ b/package.json
@@ -17,28 +17,21 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@fontsource/roboto": "^4.5.0",
-    "@headlessui/react": "^1.4.0",
-    "@heroicons/react": "^1.0.1",
     "framer-motion": "^4.1.17",
     "next": "^11.1.0",
     "pg": "^8.6.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-toast-notifications": "^2.5.0",
     "yaml": "^1.10.2"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.3.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/react-hooks": "^7.0.1",
-    "autoprefixer": "^10.2.6",
     "babel-jest": "^27.0.6",
     "eslint": "^7.30.0",
     "eslint-config-next": "^11.0.1",
     "jest": "^27.0.6",
-    "jest-fetch-mock": "^3.0.3",
-    "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4"
+    "jest-fetch-mock": "^3.0.3"
   }
 }
