Environment variables for Docker API

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DBCONN=postgresql://postgres:postgres@localhost:5438/knocker
+NEXT_PUBLIC_APIURL=http://localhost:2375/
+NEXT_PUBLIC_APIVERSION=v1.41
