--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "^11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-table": "^7.7.0",
     "yaml": "^1.10.2"
   },
   "devDependencies": {
