--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@emotion/styled": "^11.3.0",
     "@fontsource/roboto": "^4.5.0",
     "framer-motion": "^4.1.17",
-    "next": "^11.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^11.1.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-table": "^7.7.0",
     "yaml": "^1.10.2"
   },
